--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
           <artifactId>commons-dbcp</artifactId>
           <version>1.2.2</version>
       </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+      </dependency>
   </dependencies>
 
     <build>
