--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,17 @@
           <artifactId>log4j-jcl</artifactId>
           <version>2.0.1</version>
       </dependency>
+      <!-- 上传组件包 -->
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.4</version>
+      </dependency>
   </dependencies>
 
     <build>
