--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://47.92.86.119:3306/zzlvshun?useUnicode=true&amp;characterEncoding=utf-8
+url=jdbc:mysql://47.92.86.119:3306/zzlvshun?useUnicode=true&amp;characterEncoding=UTF-8
 username=tpay
 password=tpay
 initialSize=0
