--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -54,6 +54,16 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.map</url-pattern>
     </servlet-mapping>
+<!--
+    <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <async-supported>true</async-supported>
+    <init-param>
+        <param-name>encoding</param-name>
+        <param-value>UTF-8</param-value>
+    </init-param>
+</filter>-->
 
 
 </web-app>
